# dwarf-hutia

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md
.github/workflows/: ___ci__.__yml__  ci.yml
cmake/: dev-mode.cmake  grpc-gen.cmake  install-rules.cmake  spell-targets.cmake  variables.cmake  werror.cmake
proto/: example.grpc.pb.h  example.pb.h  example.proto  internalnode.proto  kvstore.proto
source/: CMakeLists.txt  client.cpp  example.pb.cc  lib.cpp  lib.hpp  main.cpp
source/apps/dwarf_cli/: CMakeLists.txt  application.cpp  application.h  main.cpp
source/apps/dwarf_service/: CMakeLists.txt  main.cpp  parser.cpp  parser.h
source/core/: CMakeLists.txt  cli.cpp  cli.h  core.cpp  core.h  istorage.h  keyvalueclient.cpp  keyvalueclient.h  keyvalueservice.cpp  keyvalueservice.h  keyvaluestore.cpp  keyvaluestore.h  node.cpp  node.h  persistancemanager.cpp  persistancemanager.h  replicaservice.cpp  replicaservice.h  server.cpp  server.h
source/core/network/: CMakeLists.txt  keyvalueclient.cpp  keyvalueclient.h  keyvalueservice.cpp  keyvalueservice.h  server.cpp  server.h
source/core/utils/: protohelpers.h  variant.h
source/dwarf_cli/: Application.cpp  Application.h  CMakeLists.txt  application.cpp  application.h  main.cpp
test/: CMakeLists.txt
test/source/: dwarf-hutia_test.cpp  persistancemanager_test.cpp
